# trustify-da-javascript-client

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  CONVENTIONS.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: integration.yml  pr-validation.yml  publish.yml  push-to-registry.yml  release.yml  test.yml
docker-image/: README.md
docker-image/Dockerfiles/: Dockerfile
docker-image/scripts/: trustify-da.sh
docs/: license-resolution-and-compliance.md
src/: analysis.js  batch_opts.js  cli.js  cyclone_dx_sbom.js  index.js  provider.js  sbom.js  tools.js  workspace.js
src/license/: compatibility.js  index.js  license_utils.js  licenses_api.js  project_license.js
src/oci_image/: utils.js
src/providers/: base_java.js  base_javascript.js  base_pyproject.js  golang_gomodules.js  gomod_parser.js  java_gradle.js  java_maven.js  javascript_npm.js  javascript_pnpm.js  manifest.js  marker_evaluator.js  python_controller.js  python_pip.js  python_pip_pyproject.js  python_poetry.js  python_uv.js  requirements_parser.js  rust_cargo.js
test/: analysis.test.js  batch_opts.test.js  exhort-backend-utils.test.js  generate_sbom.test.js  get-exhort-url.test.js  provider.test.js  stack_analysis_batch.test.js
test/it/: end-to-end.js
test/providers/: golang_gomodules.test.js  java_gradle_groovy.test.js  java_gradle_kotlin.test.js  javascript.test.js  license.test.js  license_fallback.test.js  oci_images.test.js  (+5 more)
test/providers/tst_manifests/pyproject/uv_self_ref/: expected_component_sbom.json  expected_stack_sbom.json  pyproject.toml
(+169 files in other folders)
