[project]
name = "test-project"
version = "0.1.0"
description = "Test uv PEP 621 dependencies with no ignores"
dependencies = [
    "flask==2.0.3",
    "requests==2.25.1",
    "uvicorn==0.17.0",
    "click==8.0.4",
    "beautifulsoup4==4.12.2",
    "certifi==2023.7.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
